Fix lockpaywall container display issue on mobile (#654)
REV-2357

--- a/src/courseware/course/sequence/lock-paywall/LockPaywall.scss
+++ b/src/courseware/course/sequence/lock-paywall/LockPaywall.scss
@@ -1,3 +1,7 @@
+.alert-content.lock-paywall-container {
+    display: inline-flex;
+}
+
 .lock-paywall-container svg {
     color: $primary-700;
 }
